fix: complete security audit and hardening for AICodeTutor
- Password: BCrypt strength 12, @JsonIgnore on entity, strong validation (8+ chars, uppercase, number, special), unified login error messages
- JWT: secret min 32 chars from env var, 24h expiration, distinct error responses (expired vs invalid vs missing)
- CORS: restricted to ALLOWED_ORIGINS env var, no wildcard, credentials enabled
- Authorization: ownership checks on projects, progress, users, sessions — no client-trusted userId
- Error handling: ErrorResponse DTO, no stack traces, no internal details exposed, BadCredentialsException unified
- Rate limiting: in-memory RateLimiter for auth endpoints
- HTTP headers: HSTS (1 year), XSS protection, frame deny, content type options
- Config: env var validation on startup (DATABASE_URL, JWT_SECRET, ALLOWED_ORIGINS), updated .env.example, hardened .gitignore
- Secrets: zero hardcoded secrets, zero password logging, all values from environment variables